enhanced styling and comments on what needs testing and fixing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>jQuery Salary Calculator</title>
 </head>
 <body>
-<!-- Identify page and purpore-->
+<!-- Identify page and purpose-->
     <header>
         <h1>Salary Calculator</h1>
         <p>Please use the form below to add all employees who worked this month. Once added, employees will be listed with a total of this month's salary expenditures.</p>
@@ -24,11 +24,7 @@
         <input class='js-input-eID' id='eID' required type='text' name='empID' placeholder='Employee ID Number'>
         <input class='js-input-title' id='title' required type='text' name='jobTitle'  placeholder='Job Title'>
         <input class='js-input-sal' id='sal' required type='text' name='salary' placeholder='Annual Salary'>
-
-
-    <!-- <div class='empentry'> -->
         <button class='js-input-addbtn' id='addbtn' name='addEmp'>Add Employee</button>
-        <!-- </div> -->
     </form>
     <!-- Output - Table or Grid -->
     <h2>Monthly Report - Employee Salaries</h2>
