append to table is now working with properly spaced table cells

--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
 <!-- Identify page and purpose-->
     <header>
         <h1>Salary Calculator</h1>
-        <p>Please use the form below to add all employees who worked this month. Once added, employees will be listed with a total of this month's salary expenditures.</p>
+        <p>Please use the form below to add all employees who worked this month. </br>
+            Once added, employees will be listed with a total of this month's salary expenditures.</p>
         <hr>
     </header>
     <!-- Stuff to build -->
+<div class="interact">
 <!-- form to input employees -->
     <form class='js-employeesInput'>
-        <input class='js-input-fname' id='fName' required type='text' name='firstName'  placeholder='Employee First Name'>
-        <input class='js-input-lname' id='lName' required type='text' name='lastName'  placeholder='Employee Last Name'>
+        <input class='js-input-firstName' id='fName' required type='text' name='firstName'  placeholder='Employee First Name'>
+        <input class='js-input-lastName' id='lName' required type='text' name='lastName'  placeholder='Employee Last Name'>
         <input class='js-input-eID' id='eID' required type='text' name='empID' placeholder='Employee ID Number'>
         <input class='js-input-title' id='title' required type='text' name='jobTitle'  placeholder='Job Title'>
-        <input class='js-input-sal' id='sal' required type='text' name='salary' placeholder='Annual Salary'>
-        <button class='js-input-addbtn' id='addbtn' name='addEmp'>Add Employee</button>
+        <input class='js-input-sal' id='sal' required type='number' name='salary' placeholder='Annual Salary - Whole Dollar'>
+        <button class='js-input-submit' id='submit' name='submit'>Add Employee</button>
     </form>
     <!-- Output - Table or Grid -->
     <h2>Monthly Report - Employee Salaries</h2>
     <h3>Employees</h3>
-    <!-- Make a table that displays all of my orders -->
     <table class='js-staffSalaryTableOutput'>
         <thead>
         <tr class='js-tableHeadRow'>
@@ -37,21 +38,26 @@
             <th>Last Name</th>
             <th>Employee ID</th>
             <th>Job Title</th>
-            <th>Salary</th>
+            <th colspan="2">Annual Salary</th>
         </tr>
         </thead>
-        <tr class='js-tableRows'>
-            <td>-First Name-</td>
-            <td>-Last Name-</td>
-            <td>-Employee ID Number-</td>
-            <td>-Job Title-</td>
-            <td>-Salary-</td>
-            <td><button class='js-output-delbtn' id='delEmp' name='delete'>Delete</button></td>
-        </tr>
+        <tbody class="js-table-body">
+        <tr class='js-tableRows'></tr>
+            <!--<tr> 
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td>1</td>
+                <td><button class='btn js-output-delbtn' data-index='${i}'>Delete</button></td> 
+            </tr>  -->
+        </tbody>
     </table>
+
     <div class='totalDue'>
         Monthly Total: <span class='js-amountDueToStaff'>0.00</span>
     </div>
+</div>
 </div>
 </body>
 </html>
